Tom Szilagyi
Andrzej Szombierski 
Kjetil S.Matheussen
Pieter Palmers
Tim Blechmann
Marc-Olivier Barre
Nedko Arnaudov
Fernando Lopez-Lezcano
Romain Moret
Florian Faber
Michael Voigt
Torben Hohn  
Paul Davis
Peter L Jones
Devin Anderson
Josh Green
Mario Lang
Arnold Krille
Jan Engelhardt
Adrian Knoth
David Garcia Garzon

---------------------------
  Jackdmp changes log
---------------------------

2010-11-05 Stephane Letz  <letz@grame.fr>

	* In jackdmp.cpp, jackctl_setup_signals moved before jackctl_server_start. 
	* Correct symbols export in backends.

2010-11-03 Stephane Letz  <letz@grame.fr>

	* Improve backend error handling: fatal error returned by Read/Write now cause a Process failure (so a thread exit for blocking backends). Recoverable ones (XRuns..) are now treated internally in ALSA, FreeBob and FFADO backends.

2010-10-30 Stephane Letz  <letz@grame.fr>

	* Correct JackServer::Open to avoid a race when control API is used on OSX. 

2010-10-29 Stephane Letz  <letz@grame.fr>

	* Correct lsp.c code.
	* Add note about unique port-name requirement.

2010-09-08 Stephane Letz  <letz@grame.fr>

	* Sync JackAlsaDriver::alsa_driver_check_card_type with JACK1 backend.

2010-08-30 Stephane Letz  <letz@grame.fr>

	* Version 1.9.7 started.

2010-08-25 Stephane Letz  <letz@grame.fr>

	* In JackCoreAudioDriver, fix an issue when no value is given for input.

2010-08-23 Stephane Letz  <letz@grame.fr>

	* Adrian Knoth fix for linux cycle.h (ticket 188).

2010-07-07 Stephane Letz  <letz@grame.fr>

	* Jan Engelhardt patch for get_cycles on SPARC.
	* Adrian Knoth hurd.patch, kfreebsd-fix.patch and alpha_ia64-sigsegv.patch from ticket 177.

2010-06-29 Stephane Letz  <letz@grame.fr>

	* Arnold Krille firewire snooping patch.

2010-06-16 Stephane Letz  <letz@grame.fr>

	* David Garcia Garzon unused_pkt_buf_field_jack2 netone patch.

2010-06-13 Stephane Letz  <letz@grame.fr>

	* Fix JackPosixSemaphore::TimedWait : same behavior as JackPosixSemaphore::Wait regarding EINTR.
